--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
+    "dev": "nodemon index.js" 
   },
   "repository": {
     "type": "git",
